fixed an issue with styling on page1 div which caused a large white rectangle to appear on mobile devices

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,7 +45,7 @@ font-family: 'Comfortaa', cursive;
     display: inline-block;
     padding-top: 50px;
     text-align: center;
-    left: 50%;
+    /*left: 50%; */
 }
 
 .titleHome {
